[package]
name = "svm-image"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
indexmap = { version = "2.11.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
stringlit = "2.1.0"
thiserror = "2.0.16"
uuid = { version = "1.18.0", features = ["serde", "atomic"] }
